2010-07-22  Stefan Sprenger <stefan.sprenger@dkd.de>

	* Fixed issue #6253: Result links must be made XHTML strict

2010-07-21  Markus Goldbach <markus.godlbach@dkd.de>

	* Changed install script, copy schema.xml and solrconfig.xml from svn and cleanup solr-tomcat directory

2010-07-21  Ingo Renner  <ingo.renner@dkd.de>

	* Changed the frontend indexer and tx_solr_Search to use tx_solr_ConnectionManager->getConnectionByPageId() to get a Solr connection
	* Added support for https Solr connections
	* Added support for the minimum match parameter (mm)

2010-07-20  Markus Goldbach  <markus.goldbach@dkd.de>

	* Changed the default schema.xml for mulitcore and singelcore, the spell field's content is not stored anymore

2010-07-20  Ingo Renner  <ingo.renner@dkd.de>

	* Changed solrconfig.xml so that spellchecker dictionaries are built on OPTIMIZE
	* Added spellcheck.collate=true when using spellchecking
	* Changed the spellcheck form modifier to use the collation suggestions returned by Solr
	* Added several methods in tx_solr_Query from v2.0-dev
	* Fixed an issue where sorting and facetting links didn't work out of the box because tx_solr.search.targetPage was not set. Falling back to TSFE->id now.
	* Fixed issue #4753: Standard page browser CSS is not inserted
	* Added getter and setter for the link target page id in tx_solr_Query
	* Fixed issue #7327: Sorting component does not respect target page setting from flexform
	* Added tx_solr_pi_results->getLinkTargetPageId()
	* Fixed issue where facetting links didn't respect the target page set by the flexform

2010-07-19  Ingo Renner  <ingo.renner@dkd.de>

	* Added a missing file indicator.gif for the jQuery autocomplete plugin which caused 404s
	* Added TYPO3 as a protected word in protwords.txt
	* Fixed issue #8620: automatic loading of all necessary Javascript for suggestions if activated

2010-07-19  Markus Goldbach <markus.goldbach@dkd.de>
